--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-weather-rn",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/App.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "14.0.0",
+    "@reduxjs/toolkit": "2.2.1",
+    "axios": "1.6.8",
     "expo": "~50.0.14",
+    "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-root-toast": "3.5.1",
+    "react-native-safe-area-context": "4.9.0",
+    "react-redux": "9.1.0",
+    "twrnc": "4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
