--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "14.0.0",
+    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "2.2.1",
     "axios": "1.6.8",
     "expo": "~50.0.14",
@@ -17,8 +20,11 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "2.16.0",
+    "react-native-reanimated": "3.8.1",
     "react-native-root-toast": "3.5.1",
     "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.30.1",
     "react-redux": "9.1.0",
     "twrnc": "4.2.0"
   },
