--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "2.2.1",
     "axios": "1.6.8",
+    "dayjs": "1.11.10",
     "expo": "~50.0.14",
+    "expo-location": "16.5.5",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
