--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
         {
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location for best experiences to get weather information."
         }
-      ]
+      ],
+      ["expo-localization"]
     ]
   }
 }
