--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "axios": "1.6.8",
     "dayjs": "1.11.10",
     "expo": "~50.0.14",
+    "expo-localization": "14.8.3",
     "expo-location": "16.5.5",
     "expo-splash-screen": "0.26.4",
     "expo-status-bar": "~1.11.1",
+    "i18next": "23.10.1",
+    "intl-pluralrules": "2.0.1",
     "react": "18.2.0",
+    "react-i18next": "14.1.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "2.16.0",
     "react-native-reanimated": "3.8.1",
