--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "13.0.0",
-    "@react-native-masked-view/masked-view": "0.3.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "2.2.1",
@@ -26,11 +26,11 @@
     "react": "18.2.0",
     "react-i18next": "14.1.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "2.16.0",
-    "react-native-reanimated": "3.8.1",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-root-toast": "3.5.1",
-    "react-native-safe-area-context": "4.9.0",
-    "react-native-screens": "3.30.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-redux": "9.1.0",
     "twrnc": "4.2.0"
   },
