--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "1.6.8",
     "dayjs": "1.11.10",
     "expo": "~50.0.14",
+    "expo-linear-gradient": "^12.7.2",
     "expo-localization": "14.8.3",
     "expo-location": "16.5.5",
     "expo-splash-screen": "0.26.4",
@@ -31,6 +32,7 @@
     "react-native-root-toast": "3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-shimmer-placeholder": "2.0.9",
     "react-redux": "9.1.0",
     "twrnc": "4.2.0"
   },
