--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-i18next": "14.1.0",
     "react-native": "0.73.6",
+    "react-native-country-flag": "2.0.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-root-toast": "3.5.1",
